--- a/ventapp/templates/widgets/dbs/equipDiesel.html
+++ b/ventapp/templates/widgets/dbs/equipDiesel.html
@@ -27,6 +27,7 @@
       const qr_fabricante = document.getElementById('id_qr_fabricante');
       function Funcion(){
          qr_calculado.value = (potencia.value*2.83)/(60*0.746);
+         qr_fabricante.value = 0;
       }
       function Funcion2(){
          if(qr_fabricante.value == ""){
