--- a/ventapp/templates/fanDesign.html
+++ b/ventapp/templates/fanDesign.html
@@ -15,8 +15,8 @@
 
 {% block body_content %}
 {# All your page content goes here! #}
-   <div class="container-fluid">
-      <div class="row">
+   <div class="container-fluid h-75">
+      <div class="row h-100">
          <div class="col-8 border-end border-3 border-dark">
             {% if chart_type == 'total_pressure' %}
                {% include "widgets/fanDesignCurve/totalPreassure.html" %}
@@ -29,9 +29,9 @@
             {% endif %}
          </div>
 
-         <div class="col-4">
+         <div class="col-4 h-100">
             <div class="row justify-content-center align-items-center">
-               <div class="col-12 col-md-10 col-xl-8">
+               {% comment %} <div class="col-12 col-md-10 col-xl-8">
                   {#  Model #}
                   <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
@@ -96,7 +96,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
+               </div> {% endcomment %}
             </div>
          </div>
       </div>
