--- a/ventapp/templates/widgets/base_navbar.html
+++ b/ventapp/templates/widgets/base_navbar.html
@@ -25,7 +25,7 @@
             <a class="btn btn-outline-secondary" href="{% url 'fandesign:fandesign' %}?chart_type=total_pressure" role="button">Fan design curve</a>
             {% comment %} <a class="btn btn-outline-secondary" href="{% url 'fanreal:fanreal' %}?section=current_Operation">Fan real curve</a> {% endcomment %}
             <a class="btn btn-outline-secondary" href="{% url 'currentstatus:currentstatus' %}" role="button">Current Status</a>
-            <a class="btn btn-outline-secondary" href="{% url 'settings:settings' %}" role="button">Settings</a>
+            <a class="btn btn-outline-secondary" href="{% url 'settings:settings' %}?type=current_project" role="button">Settings</a>
             {% comment %} <a class="btn btn-outline-secondary" href="{% url 'newproject:newproject' %}" role="button">New Project</a> {% endcomment %}
 
         </li>
