Added a line to plot the fan curve and boxes with information in fan design curve and current status .

--- a/ventapp/templates/currentStatus.html
+++ b/ventapp/templates/currentStatus.html
@@ -55,22 +55,46 @@
                   {#  Model #}
                   <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
-                        <p class="text-center fs-4 fw-bold m-0 ">Fan 1</p>
+                        <p class="text-center fs-4 fw-bold m-0 ">JetStream AXT0800</p>
                      </div>
                   </div>
                   {#  Model #}
                   <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
-                        <p class="text-start fs-5 m-0">JetStream AXT0800</p>
+                        <p class="text-start fs-5 m-0">Current Fan Performance</p>
                      </div>
                   </div>
                   {#  Blade angle #}
                   <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
-                        <p class="text-start fs-5 m-0">Density</p>
-                        <p class="text-start fs-6  ps-4 m-1">&#8226; 1.08 kg/m&#179;</p>
+                        
+                        <p class="text-start fs-6  ps-4 m-1">  89 % </p>
                      </div>
                   </div>
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0">Current System Performance</p>
+                     </div>
+                  </div>
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0">79 %</p>
+                     </div>
+                  </div>
+
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0">Heat generated</p>
+                     </div>
+                  </div>
+
+                  
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0">13 kW</p>
+                     </div>
+                  </div>
+
                </div>
             </div>
          </div>
@@ -157,6 +181,10 @@
          $("#pt1").text(data[2]);
          $("#power").text(data[3]);
          $("#fref").text(data[4]);
+         $("#fref").text(data[4]);
+         $("#fref").text(data[4]);
+         $("#fref").text(data[4]);
+         
       }
 
       function editFrecuency(data) {
