--- a/ventapp/templates/fanDesign.html
+++ b/ventapp/templates/fanDesign.html
@@ -29,74 +29,70 @@
             {% endif %}
          </div>
 
-         <div class="col-4 h-100">
+         <div class="col-3 h-100">
             <div class="row justify-content-center align-items-center">
-               {% comment %} <div class="col-12 col-md-10 col-xl-8">
+            <div class="row justify-content-center align-items-center">
+               <div class="col">
                   {#  Model #}
                   <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
-                        <p class="text-start fs-6 m-0">Model</p>
+                        <p class="text-center fs-4 fw-bold m-0  fw-bold ">JetStream AXT0800</p>
                      </div>
+                  </div>
+                  {#  Model #}
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
-                        <div class="input-group">
-                           <select class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
-                              <option selected>...</option>
-                              <option value="1">JetStream AXT0800</option>
-                              <option value="2">JetStream AXT0500</option>
-                              <option value="3">JetStream AXT0300</option>
-                           </select>
-                        </div>
+                        <p class="text-start fs-5 m-0  fw-bold">Blade Angle</p>
+                        <p class="text-start fs-6  ps-4 m-1">  89 % </p>
                      </div>
                   </div>
                   {#  Blade angle #}
                   <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
-                        <p class="text-start fs-6 m-0">Blade angle</p>
-                     </div>
-                     <div class="row">
-                        <div class="col-6">
-                           <div class="input-group  mb-3">
-                              <input type="number" class="form-control" aria-label="Blade angle">
-                              <span class="input-group-text">°</span>
-                           </div>
-                        </div>
+                        <p class="text-start fs-5 m-0  fw-bold">Accessories</p>
+                        
+                           <ul class =  "fs-6  ps-4 m-1">
+                              <li>Elemento 1</li>
+                              <li>Elemento 2</li>
+                              <li>Elemento 3</li>
+                           </ul>            
+                       
+                        
+                           
                      </div>
                   </div>
-                  {#  Accessories #}
                   <div class="list-group border border-3 border-warning p-3 mb-2">
-                     <p class="text-start fs-6 m-0">Accessories</p>
-                     <label class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="">
-                        Inlet Screen
-                     </label>
-                     <label class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="">
-                        Inlet Annular
-                     </label>
-                     <label class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="">
-                        Silencer
-                     </label>
-                     <label class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="">
-                        Oulet Screen
-                     </label>
-                  </div>
-                  {#  Density #}
-                  <div class="list-group border border-3 border-warning p-3">
                      <div class="row">
-                        <p class="text-start fs-6 m-0">Density</p>
-                     </div>
-                     <div class="row">
-                        <div class="col-8">
-                           <div class="input-group  mb-3">
-                              <input type="number" class="form-control" aria-label="Blade angle">
-                              <span class="input-group-text">kg/m&#179;</span>
-                           </div>
-                        </div>
+                        <p class="text-start fs-5 m-0 fw-bold">Design Density</p>
+                        <p class="text-start fs-6  ps-4 m-1">  89 % </p>
                      </div>
                   </div>
-               </div> {% endcomment %}
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0 fw-bold">Motor Power</p>
+                        <p class="text-start fs-6  ps-4 m-1">  89 % </p>
+                     </div>
+                  </div>
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0 fw-bold">Peak Resistance</p>
+                        <p class="text-start fs-6  ps-4 m-1">  73 % </p>
+                     </div>
+                  </div>
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0 fw-bold">Peak Pressure</p>
+                        <p class="text-start fs-6  ps-4 m-1">  96 % </p>
+                     </div>
+                  </div>
+
+
+                     </div>
+                  </div>
+
+               </div>
+            </div>
+        
             </div>
          </div>
       </div>
