--- a/ventapp/templates/widgets/fanDesignCurve/staticPreassure.html
+++ b/ventapp/templates/widgets/fanDesignCurve/staticPreassure.html
@@ -7,7 +7,7 @@
    </div>
 
    <div class="row h-100">
-      <div class="col m-4">
-         <div class="h-100" id="graphContainer" data-scatter-data="{{ scatter_data|safe }}"></div>
+      <div class="col ps-0">
+         <div  class="d3-graphic" id="graphContainer" data-scatter-data="{{ scatter_data|safe }}"></div>
       </div>
    </div>
