--- a/ventapp/templates/widgets/fanDesignCurve/totalPreassure.html
+++ b/ventapp/templates/widgets/fanDesignCurve/totalPreassure.html
@@ -1,13 +1,17 @@
-   <div class="row">
-      <div class="col">
+    
+
+
+  <div class="row">
+      <div class="col ">
          <button class="btn btn-secondary" role="button" onclick="changeChartType('total_pressure')">Total Preassure</button>
          <button class="btn btn-outline-secondary ms-1" role="button" onclick="changeChartType('static_pressure')">Static Preassure</button>
          <button class="btn btn-outline-secondary ms-1" role="button" onclick="changeChartType('power')">Power</button>
       </div>
    </div>
 
-   <div class="row h-100">
-      <div class="col m-4">
-         <div class="h-100" id="graphContainer" ></div>
+   <div class="row">
+      <div class="col ps-0">
+         <div class="d3-graphic" id="graphContainer" ></div>
       </div>
    </div>
+ 
