--- a/ventapp/templates/fanDesign.html
+++ b/ventapp/templates/fanDesign.html
@@ -137,17 +137,18 @@
       
       const dataV = {{ scatter_data|safe }};
       const promedios = {{ c }};
+      const dataV2 = {{scatter_data2|safe}};
       {% comment %} const curva_dis = {{VenCurvaDis}}; {% endcomment %}
       console.log(dataV);
       // Call the function initially
       document.addEventListener("DOMContentLoaded",
          function() {
             if ("{{ chart_type }}" == "total_pressure"){
-               createFanChart(dataV, 'total_pressure', promedios);
+               createFanChart(dataV, 'total_pressure', promedios, dataV2);
             } else if ("{{ chart_type }}" == "static_pressure"){
-               createFanChart(dataV, 'static_pressure', promedios);
+               createFanChart(dataV, 'static_pressure', promedios, dataV2);
             } else if ("{{ chart_type }}" == "power"){
-               createFanChart(dataV, 'power', promedios);
+               createFanChart(dataV, 'power', promedios, dataV2);
             }
          });
       // Call the function on window resize
