--- a/ventapp/templates/widgets/base_navbar.html
+++ b/ventapp/templates/widgets/base_navbar.html
@@ -22,11 +22,11 @@
 
         <li class="nav-item">
             {% comment %} <a class="btn btn-outline-secondary" href="{% url 'getdata:getdata' %}" role="button">System Input</a> {% endcomment %}
-            <a class="btn btn-outline-secondary" href="{% url 'fandesign:fandesign' %}?chart_type=total_pressure" role="button">Fan design curve</a>
-            {% comment %} <a class="btn btn-outline-secondary" href="{% url 'fanreal:fanreal' %}?section=current_Operation">Fan real curve</a> {% endcomment %}
-            <a class="btn btn-outline-secondary" href="{% url 'currentstatus:currentstatus' %}" role="button">Current Status</a>
-            <a class="btn btn-outline-secondary" href="{% url 'settings:settings' %}?type=current_project" role="button">Settings</a>
-            {% comment %} <a class="btn btn-outline-secondary" href="{% url 'newproject:newproject' %}" role="button">New Project</a> {% endcomment %}
+            <a class="btn btn-outline-secondary mt-1" href="{% url 'fandesign:fandesign' %}?chart_type=total_pressure" role="button">Fan design curve</a>
+            {% comment %} <a class="btn btn-outline-secondary mt-1" href="{% url 'fanreal:fanreal' %}?section=current_Operation">Fan real curve</a> {% endcomment %}
+            <a class="btn btn-outline-secondary mt-1" href="{% url 'currentstatus:currentstatus' %}" role="button">Current Status</a>
+            <a class="btn btn-outline-secondary mt-1" href="{% url 'settings:settings' %}?type=current_project" role="button">Settings</a>
+            {% comment %} <a class="btn btn-outline-secondary mt-1" href="{% url 'newproject:newproject' %}" role="button">New Project</a> {% endcomment %}
 
         </li>
         {% comment %}
