--- a/ventapp/templates/base.html
+++ b/ventapp/templates/base.html
@@ -14,7 +14,7 @@
 
   {## HEAD CSS ##}
   {# Bootstrap 5.1.3, served via CDN #}
-  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
   {# App CSS #}
   <link rel="stylesheet" href="{% static 'css/app.css' %}?v=0.1.0">  {# Tip: update the `?v` param to force browsers to recache a new file version. #}
@@ -45,6 +45,7 @@
   <header>
     {% include "widgets/base_navbar.html" %}
   </header>
+  
 
   {# All main content resides within a container #}
   <main role="main" class="container {% block body_container_classes %}{% endblock %}">
@@ -57,7 +58,7 @@
 
   {## JAVASCRIPT LOADED AFTER BODY ##}
   {# Bootstrap 5.1.3 requirements via CDN #}
-  <script src="{% static 'js/bootstrap.bundle.min.js' %}" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 
   {# App JavaScript #}
   <script src="{% static 'js/app.js' %}?v=0.1.0"></script>  {# Tip: update the `?v` param to force browsers to recache a new file version. #}
