--- a/ventapp/templates/widgets/fanDesignCurve/power.html
+++ b/ventapp/templates/widgets/fanDesignCurve/power.html
@@ -1,8 +1,8 @@
    <div class="row">
       <div class="col">
-         <button class="btn btn-outline-secondary" role="button" onclick="changeChartType('total_pressure')">Total Preassure</button>
-         <button class="btn btn-outline-secondary ms-1" role="button" onclick="changeChartType('static_pressure')">Static Preassure</button>
-         <button class="btn btn-secondary ms-1" role="button" onclick="changeChartType('power')">Power</button>
+         <button class="btn btn-outline-secondary mt-3" role="button" onclick="changeChartType('total_pressure')">Total Preassure</button>
+         <button class="btn btn-outline-secondary  mt-3 ms-1" role="button" onclick="changeChartType('static_pressure')">Static Preassure</button>
+         <button class="btn btn-secondary  mt-3  ms-1" role="button" onclick="changeChartType('power')">Power</button>
       </div>
    </div>
 
