--- a/ventapp/templates/widgets/settings/newDbs.html
+++ b/ventapp/templates/widgets/settings/newDbs.html
@@ -1,8 +1,8 @@
    <div class="row">
       <div class="col">
-         <a href="?type=current_project" class="btn btn-outline-secondary">Proyecto Actual</a>
-         <a href="?type=new_project" class="btn btn-outline-secondary ms-1">Nuevo Proyecto</a>
-         <a href="{% url 'dbs:dbs' %}" class="btn btn-secondary ms-1">Añadir a Base de Datos</a>
+         <a href="?type=current_project" class="btn btn-outline-secondary mt-2 ">Proyecto Actual</a>
+         <a href="?type=new_project" class="btn btn-outline-secondary mt-2 ms-1">Nuevo Proyecto</a>
+         <a href="{% url 'dbs:dbs' %}" class="btn btn-secondary mt-2 ms-1">Añadir a Base de Datos</a>
       </div>
    </div>
 
