--- a/ventapp/templates/widgets/currentStatus/current_data.html
+++ b/ventapp/templates/widgets/currentStatus/current_data.html
@@ -1,17 +1,17 @@
 <div class="row py-4 d-flex justify-content-evenly align-items-center">
-   <div class="col-6 col-md-5  m-2 p-2  d-flex border border-3 border-success">
+   <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
       <div class="col  border-end border-3 border-success">Presión total ventilador</div>
       <div class="col  text-center m-auto" id="pt1"></div>
    </div>
-   <div class="col-6 col-md-5  m-2 p-2  d-flex border border-3 border-success">
+   <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
       <div class="col border-end border-3 border-success">Caudal ventilador&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="q1"></div>
    </div>
-   <div class="col-6 col-md-5  m-2 p-2  d-flex border border-3 border-success">
+   <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
       <div class="col border-end border-3 border-success">Potencia ventilador&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="power"></div> 
    </div>
-   <div class="col-6 col-md-5  m-2 p-2  d-flex border border-3 border-success">
+   <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
       <div class="col border-end border-3 border-success">Caudal en frente&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="qf"></div>
    </div>
