--- a/ventapp/templates/widgets/dbs/ducto.html
+++ b/ventapp/templates/widgets/dbs/ducto.html
@@ -1,10 +1,10 @@
 {% load django_bootstrap5 %}
    <div class="row">
       <div class="col">
-         <a href="?type=ventilador" class="btn btn-outline-secondary">+ Ventilador</a>
-         <a href="?type=curva_diseno" class="btn btn-outline-secondary ms-1">+ Curva Diseño</a>
-         <a href="?type=ducto" class="btn btn-secondary ms-1">+ Ducto</a>
-         <a href="?type=equip_diesel" class="btn btn-outline-secondary ms-1">+ Equipamiento Diesel</a>
+         <a href="?type=ventilador" class="btn btn-outline-secondary mt-2">+ Ventilador</a>
+         <a href="?type=curva_diseno" class="btn btn-outline-secondary mt-2 ms-1">+ Curva Diseño</a>
+         <a href="?type=ducto" class="btn btn-secondary mt-2 ms-1">+ Ducto</a>
+         <a href="?type=equip_diesel" class="btn btn-outline-secondary mt-2 ms-1">+ Equipamiento Diesel</a>
       </div>
    </div>
 
