--- a/ventapp/templates/dbs.html
+++ b/ventapp/templates/dbs.html
@@ -18,7 +18,7 @@
    <div class="container-fluid">
       <div class="row">
          {# Contenido Izquierda #}
-         <div class="col-8">
+         <div class="col-sm-12 col-md-8">
             {% if db_type == 'ventilador' %}
                {% include "widgets/dbs/ventilador.html" %}
             {% elif db_type == 'curva_diseno' %}
