--- a/ventapp/templates/widgets/currentStatus/vdf_frecuency.html
+++ b/ventapp/templates/widgets/currentStatus/vdf_frecuency.html
@@ -1,12 +1,12 @@
 <div class="row py-4 d-flex justify-content-evenly align-items-center">
    <h3>Frecuencia VDF </h3>
-   <div class="col-6  m-2 p-2  border border-3 border-success" id="fref-container">
+   <div class="col-sm-6  m-2 p-2  border border-3 border-success" id="fref-container">
       <div class="row w-100">
          <div class="col-6 w-50 border-end border-3 border-success">Frecuencia Actual</div>
          <div class="col-3 w-25 text-center m-auto" id="fref"></div>
       </div>
    </div>
-   <div class="col-6  m-2 p-2  border border-3 border-success" id="fref-container">
+   <div class="col-sm-6  m-2 p-2  border border-3 border-success" id="fref-container">
       <div class="row w-100">
          <div class="col-6 w-50 border-end border-3 border-success">Editar</div>
          <div class="col-3 w-25" style="display: block" id="fref-input-div"><input type="number" min="0" max="100" step="1" class=" m-auto w-100" name="frefInput" id="fref-input"></input></div>
