--- a/ventapp/templates/widgets/dbs/curvaDiseno.html
+++ b/ventapp/templates/widgets/dbs/curvaDiseno.html
@@ -1,10 +1,10 @@
 {% load django_bootstrap5 %}
    <div class="row">
       <div class="col">
-         <a href="?type=ventilador" class="btn btn-outline-secondary">+ Ventilador</a>
-         <a href="?type=curva_diseno" class="btn btn-secondary ms-1">+ Curva Diseño</a>
-         <a href="?type=ducto" class="btn btn-outline-secondary ms-1">+ Ducto</a>
-         <a href="?type=equip_diesel" class="btn btn-outline-secondary ms-1">+ Equipamiento Diesel</a>
+         <a href="?type=ventilador" class="btn btn-outline-secondary mt-2">+ Ventilador</a>
+         <a href="?type=curva_diseno" class="btn btn-secondary mt-2 ms-1">+ Curva Diseño</a>
+         <a href="?type=ducto" class="btn btn-outline-secondary mt-2 ms-1">+ Ducto</a>
+         <a href="?type=equip_diesel" class="btn btn-outline-secondary mt-2 ms-1">+ Equipamiento Diesel</a>
       </div>
    </div>
 
@@ -15,15 +15,34 @@
             <form method="POST" id="id_cd_p">
                {% csrf_token %}
                {% bootstrap_form form %}
-               <div class="d-flex justify-content-between">
-                  <label for="cau">Caudal (m3/s)</label>
-                  <label for="cau">Presion Total (pa)</label>
-                  <label for="cau">Power (kW)</label>
+
+               <div class="row-sm-10 d-flex justify-content-between">
+
+               
+                     <div class="col-4 m-1 ps-2" >
+
+                        <label for="cau">Caudal (m3/s)</label>
+                        
+                     </div>
+
+                     <div class="col-4 m-1 ps-2" >
+                        <label for="cau" >Power (kW)</label>
+                     </div>
+
+                     <div class="col-sm-4 ps-2" >
+                        <label for="cau">Presion Total (pa)</label>
+                     </div>
+                     
+               
+
                </div>
-               <button id="btn_mas" type="button" class="btn btn-secondary" onclick="asd()">+</button>
+
+               <button id="btn_mas" type="button" class="btn btn-secondary m-1" onclick="asd()">+</button>
                <br>
-               <button class="btn btn-primary">Guardar</button>
+              <div class="col-12 position-relative">
+               <button class="position-absolute top-0 end-0 btn btn-primary mt-1 ">Guardar</button>
                <input type="hidden" value="0" id="id_v" name="veces">
+            </div>
             </form>
          </div>
       </div>
@@ -40,9 +59,24 @@
       const div = document.createElement('div');
       div.className = "d-flex justify-content-between";
       div.innerHTML = `
-            <input type="number" step="any" class="span5"`+'name="caudal_'+itr+`">
-            <input type="number" step="any" class="span5"`+'name="presion_'+itr+`">
-            <input type="number" step="any" class="span5"`+'name="power_'+itr+`">
+
+               <div class="col-4 m-1">
+
+                  <input class="form-control" type="number" step="any" class="span5"`+'name="caudal_'+itr+`">
+
+               </div>
+
+               <div class="col-4 m-1">
+                  <input class="form-control" type="number" step="any" class="span5"`+'name="presion_'+itr+`">
+               </div>
+
+               <div class="col-4 m-1">
+                  <input class="form-control" type="number" step="any" class="span5"`+'name="power_'+itr+`">
+              </div>
+         
+
+
+
       `;
       form.insertBefore(div,btn);
       veces.value = (itr+1).toString();
@@ -54,9 +88,19 @@
       const div = document.createElement('div');
       div.className = "d-flex justify-content-between";
       div.innerHTML = `
-            <input type="number" step="any" class="span5"`+'name="caudal_'+itr+`">
-            <input type="number" step="any" class="span5"`+'name="presion_'+itr+`">
-            <input type="number" step="any" class="span5"`+'name="power_'+itr+`">
+      <div class="col-4 m-1">
+
+            <input class="form-control" type="number" step="any" class="span5"`+'name="caudal_'+itr+`">
+
+      </div>
+
+      <div class="col-4 m-1">
+         <input class="form-control" type="number" step="any" class="span5"`+'name="presion_'+itr+`">
+      </div>
+
+      <div class="col-4 m-1">
+         <input class="form-control" type="number" step="any" class="span5"`+'name="power_'+itr+`">
+      </div>
       `;
       form.insertBefore(div,btn);
    }
