--- a/ventapp/templates/widgets/settings/newProject.html
+++ b/ventapp/templates/widgets/settings/newProject.html
@@ -1,4 +1,28 @@
 {% load django_bootstrap5 %}   
+   <style>
+      div.parent{
+      display: flex;
+      justify-content: space-between;
+      }
+      div.list{
+      margin-top: 100px;
+      height: 100px;
+      width: 200px;
+      overflow-y: auto;
+      border: 1px solid;
+      }
+
+      label{
+      display: block;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      }
+      input{
+      position: relative;
+      top: 2px;
+      }
+   </style>
    <div class="row">
       <div class="col">
          <a href="?type=current_project" class="btn btn-outline-secondary">Proyecto Actual</a>
@@ -12,6 +36,15 @@
          <form method="POST" id="id_cd_p">
             {% csrf_token %}
             {% bootstrap_form form %}
+            
+            <label for="#l_ep">Equipamientos</label>
+            <div id="l_ep" class="parent">
+               <div class="list">
+               {% for eqp in equipamientos %}
+                  <label><input name="eq_{{ eqp.id }}" type="checkbox">{{ eqp.modelo_diesel }} | {{ eqp.id }}</label>
+               {% endfor %}
+               </div>
+            </div>
             <button class="btn btn-primary">Guardar</button>
          </form>
       </div>
