Descarga xlsx currentstatus

--- a/ventapp/templates/widgets/currentStatus/current_data.html
+++ b/ventapp/templates/widgets/currentStatus/current_data.html
@@ -15,4 +15,5 @@
       <div class="col border-end border-3 border-success">Caudal en frente&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="qf"></div>
    </div>
-</div> 
+</div>
+<a rel="stylesheet" class="btn btn-primary" href="{% url 'currentstatus:Excel' %}">Descargar Excel</a>
